--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,9 +42,9 @@
             <h1>MARTÍN MORONDO</h1>
             <h2>Front End Developer</h2>
             <div class="social-media">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
-                <a href=""><i class="fa-brands fa-wpforms"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="#" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="" target="_blank"><i class="fa-brands fa-wpforms"></i></a>
             </div>      
         </div>
     </section>
@@ -64,15 +64,15 @@
                     <h3>Personal Information</h3>
                     <ul>
                         <li>
-                            <strong>Birthday</strong>
+                            <strong>Birthday:</strong>
                             23-02-1999
                         </li>
                         <li>
-                            <strong>Email</strong>
+                            <strong>Email:</strong>
                             martinmorondo@gmail.com
                         </li>
                         <li>
-                            <strong>Website</strong>
+                            <strong>Website:</strong>
                             https://martinmorondo.github.io/
                         </li>
                         <li>
